force-app/main/default/objects/cdcpc__RD_Girdle_Lim_Check__c/cdcpc__RD_Girdle_Lim_Check__c.object-meta.xml
<CustomObject>
    <label>RD Girdle Lim Check</label>
    <nameField>
        <label>RD Girdle Lim Check Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Girdle Lim Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>