force-app/main/default/objects/cdcpc__RD_Girdle_Lim_Check__c/fields/cdcpc__GirdleMatl__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__GirdleMatl__c</fullName>
    <label>GirdleMatl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>