force-app/main/default/objects/cdcpc__RD_Girdle_Lim_Check__c/fields/cdcpc__MaxPressUL__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__MaxPressUL__c</fullName>
    <label>MaxPressUL</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>