force-app/main/default/objects/cdcpc__RD_Girdle_Lim_Check__c/fields/cdcpc__RangeInt__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__RangeInt__c</fullName>
    <label>RangeInt</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>